--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
       "proprietary"
     ],
     "require": {
-        "php": "^7.3|^8.0"
+        "php": "^7.3|^8.0",
+        "laravel/nova": "^4.0",
     },
     "autoload": {
         "psr-4": {
