--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "laravel/nova": "^4.0",
+        "laravel/nova": "^4.0"
     },
     "autoload": {
         "psr-4": {
